Fixed some spacing issues

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -206,99 +206,3 @@
         display: block;
     }
 }
-
-.Title-Container{
-    margin-left: 10vw;
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    font-weight: normal;
-}
-
-.Title-Season{
-    color: rgb(15, 185, 185);
-    font-size: 1.9vw;
-}
-
-.Title-Directors{
-    font-size: 5.5vw;
-    color: #FF4081;
-    flex: 1;
-    margin-left: 3%;
-}
-
-.Director-Profile{
-    display: flex;
-    justify-content: center;
-    font-size: 1.1vw;
-}
-
-.Director-Profile-Text{
-    width: 50%;
-}
-
-.Director-Profile-Images-Container{
-    display: flex;
-    flex-direction: column;
-    width: 28vw;
-}
-
-.Director-Profile-Images-Top{
-    height: 20vw;
-    width: 14vw;
-}
-
-.Director-Profile-Images-Bottom{
-    margin-left: 10vw;
-    margin-top: -3vw;
-}
-
-.Supporting-Directors{
-    display: flex;
-    justify-content: center;
-    margin-top: 2%;
-}
-
-@media only screen and (max-width: 600px) {
-
-    .Title-Container{
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-
-    .Title-Season{
-        font-size: 4.9vw;
-    }
-    
-    .Title-Directors{
-        font-size: 5.5vw;
-        margin-left: 0%;
-    }
-    
-
-    .Director-Profile{
-        flex-direction: column;
-        align-items: center;
-        font-size: 1.8vw;
-    }
-    .Director-Profile-Text{
-        margin-top: 3%;
-        width: 90%;
-    }
-
-    .Director-Profile-Images-Container{
-        width: 100vw;
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .Director-Profile-Images-Top{
-        height: 60vw;
-        width: 50vw;
-    }
-    
-    .Director-Profile-Images-Bottom{
-        margin-left: 0vw;
-        margin-top: 0vw;
-    }
-}
